# lancelot.life

./: .gitignore  Cargo.toml  README.md  build.rs  build.sh  index.html  style.css  view_to_in.sh
back/: Cargo.toml
back/src/: main.rs  response.rs  router.rs
css/: style.css
src/: database.rs  main.rs  request.rs  response.rs  router.rs  template.rs  views.rs
src/router/: about.rs  articles.rs  common_struct.rs  common_views.rs  goals.rs  index.rs  influences.rs  links.rs  projects.rs  rambles.rs  utils.rs
src/router/articles/: all_articles.rs  article.rs
src/views/: article.rs
static/: index.html  manifest.json  sitemap.xml
static/css/: style.css
tests/requests/: bad_header  basic_get  method_not_supported  post_with_body
tests/templates/: array_template  litteral_content_template  only_litteral_template
tmp_views_generate/: template.rs  view_to_rs.sh
views/: about.html  all_articles.html  article.html  common.html  common_struct.html  goals.html  index.html  influences.html  links.html  misc.html  projects.html  ramble.html  rambles.html
views/common/: aside.html  struct.html
